[package]
name = "event-file-reader"
version = "0.3.0"
authors = ["Andreas Maier <andreas.martin.maier@desy.de>"]
edition = "2021"
description = "Generic reader for scattering event files"
readme = "Readme.md"
license = "GPL-3.0-or-later"
keywords = ["physics", "parser"]
categories = ["science", "parser-implementations"]
repository = "https://github.com/a-maier/event-file-reader"

[dependencies]
audec = { version = "0.1", default-features = false }
avery = { version = "0.7", default-features = false }
hepmc2 = { version = "0.7", optional = true }
lhef = { version = "0.6", optional = true }
ntuple = { version = "0.9", optional = true }
thiserror = "1.0"

[build-dependencies]
anyhow = "1.0"

[features]
default = ["hepmc2", "flate2", "lhef", "zstd"]
hepmc2 = ["dep:hepmc2", "avery/hepmc2"]
lhef = ["dep:lhef", "avery/lhef"]
ntuple = ["dep:ntuple", "avery/ntuple"]
bzip2 = ["audec/bzip2"]
lz4 = ["audec/lz4"]
lz4_flex = ["audec/lz4_flex"]
flate2 = ["audec/flate2"]
zstd = ["audec/zstd"]
all = ["bzip2", "lz4_flex", "ntuple"]
